--- a/src/main/resources/latke.properties
+++ b/src/main/resources/latke.properties
@@ -26,7 +26,7 @@
 # Browser visit protocol
 serverScheme=http
 # Browser visit domain name
-serverHost=localhost
+serverHost=39.106.214.168
 # Browser visit port, 80 as usual, THIS IS NOT SERVER LISTEN PORT!
 serverPort=8080
 
