--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -27,9 +27,9 @@ runtimeDatabase=MYSQL
 
 #### JDBC database Configurations ####
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.URL=jdbc:mysql://localhost:3306/b3log_symphony?useUnicode=yes&characterEncoding=UTF-8&useInformationSchema=true&useSSL=false&serverTimezone=UTC
+jdbc.URL=jdbc:mysql://localhost:3306/b3log_symphony?useUnicode=yes&characterEncoding=UTF-8&useInformationSchema=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=2xkYHgDgGXEA!
 
 # The specific table name prefix
 jdbc.tablePrefix=symphony
